cabal-version:      3.0
name:               aoc2023
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Yecine Megdiche
maintainer:         yecine.megdiche@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
      Day1,
      Day2,
      Day3,
      Day4,
      Day5,
      Day6,
      Day7

    build-depends:    base ^>=4.17.2.1,
                      split,
                      containers

    hs-source-dirs:   src
    default-language: Haskell2010

executable aoc2023
    import:           warnings
    main-is:          Main.hs

    build-depends:
        base ^>=4.17.2.1,
        aoc2023

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite spec
    import:           warnings
    default-language: Haskell2010
    other-modules:
        Tests

    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Driver.hs
    build-tool-depends:
        tasty-discover:tasty-discover
    build-depends:
        base ^>=4.17.2.1,
        aoc2023,
        raw-strings-qq,
        tasty >= 1.5,
        containers,
        tasty-hunit

test-suite dev
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:
        test,
        src
    main-is:          Driver.hs
    build-tool-depends:
        tasty-discover:tasty-discover
    other-modules:
        Tests,
        Day1,
        Day2,
        Day3,
        Day4,
        Day5,
        Day6,
        Day7
    build-depends:
        base ^>=4.17.2.1,
        -- lib
        split,
        containers,
        -- test
        raw-strings-qq,
        tasty >= 1.5,
        tasty-hunit
