cabal-version:      3.0
name:               aoc2024
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Yecine Megdiche
maintainer:         yecine.megdiche@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
      Day6,
      Day7,
      Day8,
      Day9,
      Day10,
      Day11,
      Day12,
      Day13,
      Day14,
      Day15,
      Day16,
      Day17,
      Day18,
      Day19,
      Utils

    build-depends:    base ^>=4.17.2.1,
                      split,
                      slist,
                      containers,
                      unordered-containers,
                      heap,
                      mtl,
                      hashable,
                      transformers,
                      vector

    hs-source-dirs:   src
    default-language: Haskell2010

executable aoc2024
    import:           warnings
    main-is:          Main.hs

    build-depends:
        base ^>=4.17.2.1,
        aoc2024

    hs-source-dirs:   app
    default-language: Haskell2010
